Deploy 2ndHand project

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Fetching News Api",
-  "name": "fetchReact-Klyuchnik",
+  "short_name": "2ndHand | Arseny Klyuchnik",
+  "name": "2ndHand | Typescript React Redux App | Arseny Klyuchnik",
   "icons": [
     {
       "src": "favicon.ico",
